ecmascript/parser/tests/test262-error-references/fail/7da8521583578fd0.js.stderr
error: Unterminated regexp literal
 --> $DIR/tests/test262-parser/fail/7da8521583578fd0.js:1:9
  |
1 | var x = /[a-z
  |         ^^^^^

